src/00-original.css
/* ... */
.userlistbutton.cancel {
    padding-left: 5px;
    width: 30px;
    font-size: 16px;
    line-height: 24px;
}

.userlistbutton.remove {
    line-height: 0px;
    font-size: 18px;
}

.userlistbutton.edit:hover {
    background-color: #eaeaea;
}

.userlistbutton.cancel:hover {
    background-color: #eaeaea;
}

.userlistbutton.commit:hover {
    background-color: #648cd6;
}

.userlistbutton.remove:hover {
    background-color: #ec7f6d;
}

.userlistbutton.showmore {
    margin: 4px;
}

.formtable td {
    padding-top: 6px;
    padding-bottom: 6px;
}

.generalcomment-header {
    vertical-align: top;
    padding-top: 10px;
    width: 130px;
}

.generalcomment-cell {
    vertical-align: top;
}

#generalcomment-comment {
    padding: 10px;
    display: block;
}

.srf-slideshow .slideshow-nav-readout {
    top: -0.1em;
}

.srf-slideshow {
    margin: auto;
}

.slideshow {
    margin-left: 2px;
    margin-right: 2px;
}

.srf-slideshow .slideshow-nav {
    border: 1px solid #aaa;
    border-radius: 3px;
    background: #f1f2ff;
    margin-top: -11px;
    margin-bottom: 7px;
    margin-left: 1.6em;
    margin-right: 1.6em;
}

a.ui-slider-handle.ui-state-default.ui-corner-all {
    height: 16px;
    width: 26px;
    top: -5px;
    line-height: 19px;
    padding: 0px;
    border-radius: 4px;
}

.ui-slider-horizontal .ui-slider-handle {
    margin-left: -1.4em;
}

li img {
    /* this is for the country flag that appears next to beta site links */
    padding-right: 3px;
}

#loadmore button {
    margin-bottom: 4px;
}

#searchinfo.cancel {
    position: relative;
    bottom: 6px;
}

.rwSortIcon {
    cursor: pointer;
    background-repeat: no-repeat;
    background-size: contain;
    opacity: 0.5;
    width: 14px;
    height: 18px;
    margin-top: 6px;
    margin-left: 3px;
    margin-right: 3px;
    display: inline-block;
    z-index: 2;
    background-image: url("/images/2/2c/Sorticon.png");
}

.rwSortIcon:hover {
    opacity: 1.0;
}

.rwText {
    position: relative;
    bottom: 5px;
    margin: 3px;
}

.rwTextNoSort {
    /* without the sort button, the text gets moved up */
    position: relative;
    bottom: -3px;
}

.controls.dragcontrol {
    cursor: row-resize;
    height: 20px;
    width: 34px;
    margin-bottom: 20px;
    line-height: 10px;
}

#ghostbar {
    /* the 'ghost' bar that appears when resizing the map */
    height: 3px;
    background-color: #000;
    opacity: 0.5;
    position: absolute;
    cursor: col-resize;
    z-index: 999;
}

.filterchk label {
    display: inline-block;
}

.filterchk label>input {
    pointer-events: none;
    margin-left: 0px;
    margin-right: 3px;
}

.filterchk.permits label {
    margin-right: 6px;
}

.filterchk.vehicle label {
    margin-right: 4px;
}

.filterchk.season label {
    width: 40px;
    float: left;
}

.filterchk.rating label {
    min-width: 34px;
}

.filterchk.marker label {
    width: 38px;
}

.filterchk.marker input {
    margin: 0px;
}

.rating-tr {
    position: relative;
    left: -12px;
    top: 4px;
}

/* this sets the styling of the "Details" section in the canyon right sidebar */
.detailsRow {
    font-family: sans-serif;
    font-size: 14px;
    position: relative;
    margin-bottom: 2px;
}

.detailsRow pre {
    white-space: normal;
}

.detailsRow.detailsRowDescriptor {
    font-weight: bold;
    text-align: right;
    left: -87px;
    width: 80px;
    position: absolute;
}

/* remove the external link indicator */
#content a.external {
    background: none !important;
    padding: 0 !important;
}



.VIP {
    background-color: red;
    color: yellow;
    font-weight: bold;
    border-radius: 8px;
    padding: 1px 4px 1px 4px;
    margin: 0 4px 0 auto;
    position: relative;
    left: 3px;
    display: inline-block;
    cursor: pointer;
}

.VIP::after {
    content: "After 100 ratings a user's score doubles in weight.";
    position: absolute;
    left: 50%;
    bottom: 100%;
    transform: translateX(-50%);
    background-color: #333;
    color: #fff;
    padding: 5px;
    border-radius: 3px;
    white-space: nowrap;
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;
    font-size: 12px;
}

.VIP:hover::after {
    opacity: 1;
}

.prediv {
    border-style: solid;
    color: black;
    border-width: 1px;
    white-space: pre;
    font-family: monospace;
}

.formregiontable td,
th {
    vertical-align: top;
}

#content {
    transition: margin-left 0ms, padding 0ms !important;
}

th {
    text-transform: capitalize;
}

.note {
    border: 1px solid black;
    padding-left: 12px;
    padding-right: 12px;
    margin-top: 12px;
    margin-bottom: 12px;
    margin-left: 24px;
    margin-right: 24px;
    background: #DDFFEE;
}

.client-nojs .smwttcontent {
    font-size: .7em;
}

.client-nojs .smwttcontent:before {
    content: " (";
}

.client-nojs .smwttcontent:after {
    content: ")";
}



th.headerSort {
    white-space: nowrap;
}



.popforms * {
    color: red !important;
}

/*fix problem with KML InfoWindows*/
.gm-style-iw,
.gm-style-iw div {
    font-family: Roboto, Arial, sans-serif !important;
    font-size: 1em !important;
    line-height: normal;
    width: auto;
    overflow: hidden !important;
    /* this suppresses the hidden scrollbars on the right and bottom that were creating whitespace */
}

.gm-style .gm-style-iw-c {
    padding: 12px !important;
}

.gm-style-iw div {
    -webkit-user-select: text !important;
    -moz-user-select: text !important;
    -khtml-user-select: text !important;
    -ms-user-select: text !important;
    -user-select: text !important;
}

/* link icons */

.pops {
    text-align: center;
}

.pops.add-photo {
    width: 250px;
    height: 250px;
    line-height: 250px;
    border: 1px solid #404040
}

.pops a {
    background: url(/images/e/e3/Popup-link.png) center right no-repeat !important;
    padding-right: 13px !important;
}

img.pops {
    box-shadow: 0px 16px 30px -14px rgb(0 0 0 / 50%);
    border-radius: 4px;
}
/* ... */

